--- a/Source/Umbraco/Views/Partials/FormEditor/Sync.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Sync.cshtml
@@ -4,13 +4,13 @@
 @{
   // get the content that contains the form model (defaults to the current page)
   var formContent = ViewBag.FormContent as IPublishedContent ?? Model;
-  
+
   // get the name of the form model property on the content type (defaults to "form")
   var formPropertyName = ViewBag.FormName as string ?? "form";
-  
+
   // get the form model
   var form = formContent.GetPropertyValue<FormModel>(formPropertyName);
-  
+
   // handle form submission if this is a postback
   // - this will also take care of redirecting to the success page (if configured)
   var formWasSubmitted = form.CollectSubmittedValues(formContent);
@@ -25,7 +25,7 @@
   var showMaxSubmissionsExceededMessage = showMaxSubmissionsExceededForCurrentUserMessage == false && formWasSubmitted == false && form.MaxSubmissionsExceeded(formContent);
 }
 
-@if(showReceiptMessage)
+@if (showReceiptMessage)
 {
   @* form was submitted and we have a receipt message - show message *@
   <div class="container form-receipt">
@@ -60,16 +60,16 @@ else
   @* render the form *@
   <form method="POST" enctype="multipart/form-data" novalidate>
     <div class="container form-data">
-      @foreach(var page in form.Pages)
+      @foreach (var page in form.Pages)
       {
         <div class="form-page" style="@(page == form.Pages.First() ? null : "display:none;")">
-          @foreach(var row in page.Rows)
+          @foreach (var row in page.Rows)
           {
             <div class="row @row.Alias">
-              @foreach(var cell in row.Cells)
+              @foreach (var cell in row.Cells)
               {
                 <div class="cell @cell.Alias">
-                  @foreach(var field in cell.Fields)
+                  @foreach (var field in cell.Fields)
                   {
                     // render the form field with a partial view
                     // - the view is expected to be located at /Views/Partials/FormEditor/FieldsSync/[field type].cshtml, e.g. /Views/Partials/FormEditor/FieldsSync/core.checkbox.cshtml
@@ -81,11 +81,11 @@ else
           }
         </div>
       }
-      @* 
-        paging links 
+      @*
+        paging links
         TIP: you can localize the "Previous" and "Next" texts by adding "form.paging.previous" and "form.paging.next" to the Umbraco dictionary
       *@
-      @if(form.Pages.Count() > 1)
+      @if (form.Pages.Count() > 1)
       {
         <nav>
           <ul class="pager">
@@ -106,15 +106,15 @@ else
         form validation errors container (for cross field validations)
         TIP: you can localize the header text by adding "form.validationerrors.header" to the Umbraco dictionary
       *@
-      <div class="row form-validation-errors">
+      <div id="validationErrors" class="row form-validation-errors @(form.Validations.Any(v => v.Invalid) ? null : "hide")">
         <div class="cell">
           <div class="form-group">
-            <div id="validationErrors" class="alert alert-danger @(form.Validations.Any(v => v.Invalid) ? null : "hide")">
+            <div class="alert alert-danger">
               <h4>
                 @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.validationerrors.header"), "The form contains errors")
               </h4>
               <ul id="validationErrorsList">
-                @foreach(var invalidValidation in form.Validations.Where(v => v.Invalid))
+                @foreach (var invalidValidation in form.Validations.Where(v => v.Invalid))
                 {
                   <li>@invalidValidation.ErrorMessage</li>
                 }
@@ -125,7 +125,7 @@ else
       </div>
     </div>
   </form>
-    
+
   @* this script section sets up state for the JS and thus needs to be a part of the template *@
   <script type="text/javascript">
     @* render the form validations as an array of JSON objects *@
