Turn sync JS into a jQuery plugin

--- a/Source/Umbraco/Views/FormEditorAsync.cshtml
+++ b/Source/Umbraco/Views/FormEditorAsync.cshtml
@@ -41,7 +41,7 @@
 <body>
   
   @* step 1: render the form with the Async partial *@
-  @Html.Partial("FormEditor/Async", Umbraco.AssignedContentItem);  
+  @Html.Partial("FormEditor/Async", Umbraco.AssignedContentItem)
 
   @* step 2: include AngularJS *@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
