--- a/Source/Umbraco/Views/FormEditorSync.cshtml
+++ b/Source/Umbraco/Views/FormEditorSync.cshtml
@@ -41,7 +41,7 @@
 <body>
   
   @* step 1: render the form with the Sync partial *@
-  @Html.Partial("FormEditor/Sync", Umbraco.AssignedContentItem);
+  @Html.Partial("FormEditor/Sync", Umbraco.AssignedContentItem)
 
   @* step 2: include jQuery *@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
