--- a/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
@@ -19,7 +19,7 @@
   // max submissions exceeded in total? (no need to check if max submissions are exceeded for the current user)
   var maxSubmissionsExceeded = maxSubmissionsExceededForCurrentUser == false && form.MaxSubmissionsExceeded(formContent);
 }
-<div ng-app="formEditor" ng-controller="FormController" ng-init="init(@formContent.Id)" ng-cloak>
+<div ng-app="@(ViewBag.FormAppDeclared == true ? null : "formEditor")" ng-controller="FormController" ng-cloak>
   @* only render the form if we can actually submit to it *@
   @if (maxSubmissionsExceeded == false && maxSubmissionsExceededForCurrentUser == false)
   {
@@ -32,7 +32,7 @@
     </div>
 
     @* render the form *@
-    <div class="container form-data" ng-hide="showReceipt">
+    <div class="container form-data" ng-hide="showReceipt" ng-init="init(@formContent.Id)">
       <form name="form" novalidate>
         @foreach (var page in form.Pages)
         {
