--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -474,7 +474,7 @@
   div.form-data {
     overflow-x: auto;
 
-    table {
+    table, table.table-striped {
       margin: 0px;
 
       thead tr {
