--- a/Source/Umbraco/Views/Partials/FormEditor/Sync.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Sync.cshtml
@@ -59,6 +59,8 @@ else
 {
   @* render the form *@
   <form method="POST" enctype="multipart/form-data" data-form-editor="@formContent.Id" novalidate>
+    @* add hidden _id to support multiple forms submitting to the same page *@
+    <input type="hidden" name="_id" value="@formContent.Id" />
     <div class="container form-data">
       @foreach (var page in form.Pages)
       {
