Make the editor tabs configurable

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -622,6 +622,21 @@
       }
     }
 
+    &.tab-order {
+      list-style: none;
+      margin: 0;
+
+      li {
+        margin-bottom: 10px;
+        cursor: default;
+        
+        .tab-name {
+          display: inline-block;
+          min-width: 150px;
+        }
+      }
+    }
+
     &.field-type-groups {
       .assigned-field-types-container {
         cursor: default;
