Use submitted values in email subjects (#76)

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -441,7 +441,16 @@
 
     &.help-text {
       text-transform: none;
-      padding-top: 2px;
+      padding: 0px 0 4px 0;
+      font-size: 11px;
+      line-height: 13px;
+      color: #b3b3b3;
+      display: block;
+      max-width: 80%;
+
+      &.full-width {
+        max-width: 100%;
+      }
     }
   }
 }
