--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsNoScript/core.upload.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsNoScript/core.upload.cshtml
@@ -1,7 +1,7 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.UploadField>
 <div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
   <label for="@Model.FormSafeName">@Model.Label</label>
-  <input type="file" id="@Model.FormSafeName" name="@Model.FormSafeName" @(Model.Mandatory ? "required" : null) accept="@Model.GetValidExtensions()" oninvalid='setCustomValidity("@HttpUtility.JavaScriptStringEncode(Model.ErrorMessage)");' oninput="setCustomValidity('')" />
+  <input type="file" id="@Model.FormSafeName" name="@Model.FormSafeName" @(Model.Mandatory ? "required" : null) accept="@Model.GetValidExtensions()" oninvalid='setCustomValidity("@HttpUtility.JavaScriptStringEncode(Model.ErrorMessage)");' onchange="setCustomValidity('')" />
 
   @Html.Partial("FormEditor/FieldsNoScript/core.utils.helptext")
   @Html.Partial("FormEditor/FieldsNoScript/core.utils.validationerror")
