--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.date.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.date.cshtml
@@ -1,7 +1,7 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.DateField>
 <div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
   <label for="@Model.FormSafeName">@Model.Label</label>
-  <input type="date" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" @(Model.Mandatory ? "required" : null) />
+  <input type="date" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" @(Model.Mandatory ? "required" : null) ng-model-options="{timezone: 'UTC'}" />
 
   @Html.Partial("FormEditor/FieldsAsync/core.utils.helptext")
   @Html.Partial("FormEditor/FieldsAsync/core.utils.validationerror")
