--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsNoScript/core.utils.validationerror.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsNoScript/core.utils.validationerror.cshtml
@@ -1,4 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.IFieldWithValidation>
+@* for the NoScript rendering, this is solely rendered server side *@
 @if (Model.Invalid)
 {
   <div class="text-danger validation-error">
