--- a/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
@@ -10,8 +10,15 @@
   // get the name of the form model property on the content type (defaults to "form")
   var formPropertyName = ViewBag.FormName as string ?? "form";
 
-  // get the form model (named "form" on the content type)
+  // get the form model
   var form = formContent.GetPropertyValue<FormModel>(formPropertyName);
+
+  // #104 - don't break the site if the form model could not be found
+  if(form == null)
+  {
+    @: <!-- no Form Editor form was found on the page -->
+    return;
+  }
 
   // attempt to load an existing submission if ViewBag.FormRowId is defined
   if(ViewBag.FormRowId is string)
