Action handling in frontend
Still needs adding to all field types for async handling

--- a/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
@@ -135,6 +135,9 @@
       @* form validations as an array of JSON objects *@
       _fe[@formContent.Id].validations = @form.Validations.Render();
 
+      @* form actions as an array of JSON objects *@
+      _fe[@formContent.Id].actions = @form.Actions.Render();
+
       @* the total number of form pages *@
       _fe[@formContent.Id].totalPages = @form.Pages.Count();
 
