--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.email.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.email.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.EmailField>
-<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)" ng-hide="formAction.@Model.FormSafeName == false">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <input type="email" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" placeholder="@Model.Placeholder" ng-model="formData.@Model.FormSafeName" multiple="@Model.Multiple" @(Model.Mandatory ? "required" : null) />
 
