--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkbox.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkbox.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.CheckboxField>
-<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid? "has-error" : null) checkbox">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid? "has-error" : null) checkbox" action-field="@Model.FormSafeName">
   <label>
     <input type="checkbox" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" value="true" @(Model.Mandatory ? "required" : null) />
     @Model.Label
