--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.dropdown.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.dropdown.cshtml
@@ -1,12 +1,12 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.DropdownField>
-<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)" action-field="@Model.FormSafeName">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <select class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" @(Model.Mandatory ? "required" : null)>
-    @if (string.IsNullOrEmpty(Model.DefaultText) == false)
+    @if(string.IsNullOrEmpty(Model.DefaultText) == false)
     {
       <option value="">@Model.DefaultText</option>
     }
-    @foreach (var fieldValue in Model.FieldValues)
+    @foreach(var fieldValue in Model.FieldValues)
     {
       <option value="@fieldValue.Value">@fieldValue.Value</option>
     }
@@ -15,3 +15,4 @@
   @Html.Partial("FormEditor/FieldsAsync/core.utils.helptext")
   @Html.Partial("FormEditor/FieldsAsync/core.utils.validationerror")
 </div>
+
