--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.telephone.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.telephone.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.TelephoneField>
-<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)" action-field="@Model.FormSafeName">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <input type="tel" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" placeholder="@Model.Placeholder" ng-model="formData.@Model.FormSafeName" @(Model.Mandatory ? "required" : null) />
 
