--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.upload.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.upload.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.UploadField>
-<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)" action-field="@Model.FormSafeName">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <input type="file" id="@Model.FormSafeName" name="@Model.FormSafeName" @(Model.Mandatory ? "required-file" : null) accept="@Model.GetValidExtensions()" file-upload ng-model="formData.@Model.FormSafeName" />
 
