--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -24,6 +24,7 @@
     }
 
     &.form-validations {
+      margin-top: 5px;
 
       li.form-validation {
         box-sizing: border-box;
@@ -217,7 +218,7 @@
     }
   }
 
-  .no-form-pages, .no-form-rows {
+  .no-form-pages, .no-form-rows, .no-validations {
     text-align: center;
     padding: 10px;
     i {
@@ -346,6 +347,7 @@
   h5 {
     color: @fontColor;
     font-size: inherit;
+    text-transform: none;
   }
 
   h4, h5 {
