--- a/Source/Umbraco/Views/FormEditorAsync.cshtml
+++ b/Source/Umbraco/Views/FormEditorAsync.cshtml
@@ -9,7 +9,10 @@
   // ViewBag.FormName = "myForm";
   
   @* if you want to load submission data for an existing form submission, specify the row ID (GUID) like this *@
-  // ViewBag.FormRowId = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx";  
+  // ViewBag.FormRowId = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx";
+
+  @* if you're using form pages and want to render your own paging links, use this *@
+  // ViewBag.FormSkipPagingLinks = true;
 }
 <!DOCTYPE html>
 <html>
