Styling the web service configuration

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -698,6 +698,22 @@
       color: @dangerColor;
     }
   }
+
+  div.web-service-configuration {
+    margin-bottom: 4px;
+
+    label {
+      display: block;
+      margin-bottom: 0;
+    }
+
+    small {
+      display: block;
+      text-transform: none;
+      font-size: 11px;
+      color: @dimmedColor;
+    }
+  }
 }
 
 .form-editor-data-entry {
