--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.utils.validationerror.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.utils.validationerror.cshtml
@@ -1,4 +1,4 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.IFieldWithValidation>
-<div class="text-danger validation-error hide" ng-class="{show: shouldShowValidationError('@(Model.FormSafeName)', @(ViewBag.FormEditorPageNumber))}">
+<div class="text-danger validation-error" ng-show="shouldShowValidationError('@(Model.FormSafeName)', @(ViewBag.FormEditorPageNumber))">
   @Model.ErrorMessage
 </div>
