--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.invisiblerecaptcha.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.invisiblerecaptcha.cshtml
@@ -16,29 +16,29 @@
       var captchaWidget_@(formContent.Id);
 
       function captchaValidate_@(formContent.Id)() {
-        // get the global access to the form scope
+        @* get the global access to the form scope *@
         var fe = feGlobal[@(formContent.Id)];
-        // execute the form client side validation
+        @* execute the form client side validation *@
         fe.validate().then(function (valid) {
           if (valid == true) {
-            // the form is valid - execute the reCAPTCHA
+            @* the form is valid - execute the reCAPTCHA *@
             grecaptcha.execute(captchaWidget_@(formContent.Id));
           }
         });
       }
 
       function captchaSubmit_@(formContent.Id)(token) {
-        // get the global access to the form scope
+        @* get the global access to the form scope *@
         var fe = feGlobal[@(formContent.Id)];
-        // submit the form
+        @* submit the form *@
         fe.submit().then(function(valid, data) {
-          // once the form is submitted, reset the reCAPTCHA in case we need to re-submit the form
+          @* once the form is submitted, reset the reCAPTCHA in case we need to re-submit the form *@
           grecaptcha.reset(captchaWidget_@(formContent.Id));
         });
       }
 
       function captchaLoad_@(formContent.Id)() {
-        // explicitly render the reCAPTCHA widget so we know which widget to validate (in case we have multiple forms)
+        @* explicitly render the reCAPTCHA widget so we know which widget to validate (in case we have multiple forms) *@
         captchaWidget_@(formContent.Id) = grecaptcha.render("captcha_@(formContent.Id)", {}, true);
       }
     </script>
