--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.invisiblerecaptcha.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.invisiblerecaptcha.cshtml
@@ -4,11 +4,17 @@
   var language = Umbraco.CultureDictionary.Culture.TwoLetterISOLanguageName.ToLowerInvariant();
   // get the content on which the form resides (assigned by the partial form rendering)
   var formContent = ViewBag.FormContent as IPublishedContent;
-
-  var hasReCaptchaInit = ViewContext.HttpContext.Items["feReCaptchaInit"] != null;
-  ViewContext.HttpContext.Items["feReCaptchaInit"] = "true";
 }
-<div class="form-group">
+<div class="form-group @(Model.Invalid ? "has-error" : null)">
+  @if(string.IsNullOrEmpty(Model.PublicKey) || string.IsNullOrEmpty(Model.PrivateKey))
+  {
+    <b>Invalid reCAPTCHA configuration - missing either public or private key</b>
+    return;
+  }
+  @{
+    var hasReCaptchaInit = ViewContext.HttpContext.Items["feReCaptchaInit"] != null;
+    ViewContext.HttpContext.Items["feReCaptchaInit"] = "true";    
+  }
   <script>
     var captchaWidget_@(formContent.Id);
 
